updates back button on full size photographs in photography section

--- a/KayMcCreedy.html
+++ b/KayMcCreedy.html
@@ -76,49 +76,49 @@
 						<!-- Pic05 -->
 							<article class="photograph" id="pic05" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic05.jpg" alt=""></span>
-								<nav><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></nav>
+								<nav><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></nav>
 							<div class="close">Close</div></article>
 
 						<!-- Pic06 -->
 							<article class="photograph" id="pic06" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic06.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic07 -->
 							<article class="photograph" id="pic07" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic07.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic08 -->
 							<article class="photograph" id="pic08" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic08.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic09 -->
 							<article class="photograph" id="pic09" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic09.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic10 -->
 							<article class="photograph" id="pic10" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic10.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic11 -->
 							<article class="photograph" id="pic11" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic11.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- Pic12 -->
 							<article class="photograph" id="pic12" style="display: none;">
 								<span class="image fit"><img src="./KayMcCreedy_files/pic12.jpg" alt=""></span>
-								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">🠔 Back</a></p>
+								<p><a href="https://624760f60472a61288ba4bdb--kaymccreedy.netlify.app/#photography">Back</a></p>
 							<div class="close">Close</div></article>
 
 						<!-- About -->
