updates about section to reflect breakup

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Kay McCreedy was born in Berkeley, California and grew up in Bend, Oregon.  Despite a strong desire to study mathematics or physics, they did not attend college, instead working in various service industry jobs during their early adult life.  After a period of several years spent travelling around the United States, they settled in Philadelphia with their partner, where they currently live.  Aside from being an avid writer, amateur photographer, and self-taught musician, they also have a passion for home-brewed coffee, spirituality, and the New York Times Crossword.</p>
+								<p>Kay McCreedy was born in Berkeley, California and grew up in Bend, Oregon.  Despite a strong desire to study mathematics or physics, they did not attend college, instead working in various service industry jobs during their early adult life.  After a period of several years spent travelling around the United States, they settled in Philadelphia, where they currently live.  Aside from being an avid writer, amateur photographer, and self-taught musician, they also have a passion for home-brewed coffee, spirituality, and the New York Times Crossword.</p>
 							</article>
 
 						<!-- Contact -->
