--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Kay McCreedy is a writer, photographer, and musician based out of Philadelphia.  Finding that such pursuits, while personally meaningful, are not particularly effective ways of earning a living, they have turned to coding, and are hoping to plunge into the tech world by way of a coding bootcamp.  If you are interested to peruse their creative work, head <a href="#work">here</a> to learn more.</p>
-								<p>However, if you've found your way to this site, you're most likely considering Kay for a spot in the upcoming session of the Actualize Coding Bootcamp, and are seeking to understand more about their ability to translate the information provided in the online tutorials on the <a href="http://anyonecanlearntocode.com/">Actualize website.</a>  In that case, go ahead and take a look around—they're confident you'll like what you see.</p>
+								<p>However, if you've found your way to this site, you're most likely checking out Kay's coding skills.  In that case, go ahead and take a look around—they're confident you'll like what you see.</p>
 							</article>
 
 						<!-- Work -->
